--- a/default.hbs
+++ b/default.hbs
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
     {{! Page Meta }}
-    <title>{{meta_title}} | Life Awesome Blog</title>
+    <title>{{meta_title}} | Grand Theft Auto Australia </title>
     <meta name="description" content="{{meta_description}}" />
     <meta name="HandheldFriendly" content="True" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -43,10 +43,10 @@
         <div class="link">
             <nav>
                 <ul>
-                    <li><a class="link" href="{{@blog.url}}" title="Life Awesome Blog homepage">blog</a></li>
-                    <li><a class="link" href="https://twitter.com/lifeaweso_me" title="Follow Life Awesome on Twitter" target="_blank">@lifeaweso_me</a></li>
-                    <li><a class="link" href="https://twitter.com/_danielep_" title="Follow Daniele Petrarolo on Twitter" target="_blank">@_danielep_</a></li>
-                    <li><a class="link" href="https://twitter.com/Trip314" title="follow Alen Subat on Twitter" target="_blank">@trip314</a></li>
+                    <li><a class="link" href="{{@blog.url}}" title="Grand Theft Auto Australia">Blog</a></li>
+                    <li><a class="link" href="https://www.facebook.com/groups/GtaAus/" title="Join our Facebook Community " target="_blank">Facebook</a></li>
+                    <li><a class="link" href="http://socialclub.rockstargames.com/crew/gtaaus" title="Console Social Club Link ="_blank">SocialClub</a></li>
+                    <li><a class="link" href="http://socialclub.rockstargames.com/crew/gtaauspc" title="GTAAUS PC Social Club Crew" target="_blank">PC Crew</a></li>
                     <li><a class="link" href="{{@blog.url}}/rss/"><i class="fi-rss"></i> rss</a></li>
                 </ul>
             </nav>
