--- a/partials/footer.hbs
+++ b/partials/footer.hbs
@@ -2,10 +2,10 @@
     <footer>
         <div class="row">
             <div class="columns large-6">
-                &copy; {{date format="YYYY"}} <a href="http://lifeaweso.me" title="Open Life Awesome web site" target="_blank"><span class="lifeawesome">lifeawesome</span></a>
+                &copy; {{date format="YYYY"}} <a href="http://gtaaus.com" title="GTAAUS" target="_blank"><span class="GTAAUS">GTAAUS</span></a>
             </div>
             <div class="columns large-6 right">
-                Proudly published with <a title="Ghost Blogging Platform" href="https://ghost.org" target="_blank">Ghost</a>
+                Proudly Powered By <a title="NUEGEN" href="https://nuegen.com" target="_blank">NueGen</a>
             </div>
         </div>
     </footer>
